@@ -1,7 +1,9 @@
 Version 0.4.7 (...)
 ===================
 * Fixed typo in random_points.cc example. Thanks to Guo-Jie Gao (Osaka
-* University) for pointing this out.
+  University) and Jose Adsuara (Universit of Valencia) for pointing this out.
+* Fixed documentation error in normals routine. Thanks to Jean Farago
+  (Université de Strasbourg) for pointing this out.
 
 Version 0.4.6 (October 17th 2013)
 =================================
